# MaGE

./: .gitignore  README.md
src/: Shader.h  camera.cpp  camera.h  glfw_setup.cpp  glfw_setup.h  material.h  shader.cpp
src/mesh/: mesh.h
src/shader/: blinn_phong16.cpp
test/: CMakeLists.txt  build.bat  glm_to_string.h  main.cpp  runner.ps1  test_camera.cpp  test_glfw_setup.cpp  test_shader.cpp
test/test_shader_data/: invalid.frag.glsl  invalid.vert.glsl
